[tool.poetry]
name = "filibuster-comparison"
version = "0.1.0"
description = ""
authors = ["Delano Flipse <delanoflipse@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=7.1.2"
flask = "1.0.0"
jinja2 = "3.0.1"
werkzeug = "2.2.2"
itsdangerous = "2.0.1"
requests = "2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
