[tool.poetry]
name = "filibuster"
version = "0.0.4"
description = "Filibuster CLI tool and Python client libraries."
authors = ["Christopher S. Meiklejohn <christopher.meiklejohn@gmail.com>"]
readme = "README.md"
license = 'Apache-2.0'

[tool.poetry.dependencies]
python = "^3.8"
click = ">=7.1.2"
flask = "2.2.3"
jinja2 = "3.0.1"
werkzeug = "2.2.2"
itsdangerous = "2.0.1"
requests = "2.28.1"
waitress = "2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
